--- a/CSS/box shadow/index.html
+++ b/CSS/box shadow/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css gradients</title>
+    <title>css box shadow</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- CSS Gradients -->
- <div>
-    
- </div>
+    <!-- box shadow -->
+<!-- <div id="box-shadow"></div> -->
 
+<!-- drop shadow -->
+ <div id="drop-shadow">
+ <img src="">
+ </div>
 
 </body>
 </html>
