update css revision

--- a/CSS/box shadow/index.html
+++ b/CSS/box shadow/index.html
@@ -11,9 +11,12 @@
 <!-- <div id="box-shadow"></div> -->
 
 <!-- drop shadow -->
- <div id="drop-shadow">
- <img src="">
- </div>
-
+<!--  
+  <section id="drop-shadow">
+    <div>
+        <img src="../images/vecteezy_happy-3d-student-boy-with-books-on-white-background-png_22484651.png" alt="">
+    </div>
+  </section>
+ -->
 </body>
 </html>
